--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <!-- Todo: only include in production -->
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   </body>
 </html>
