Defer and async external scripts

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Todo: only include in production -->
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
     <!-- built files will be auto injected -->
-    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="1aa08a90-4721-45f6-809f-030eb4322337";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+    <script async defer type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+    <script async defer type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="1aa08a90-4721-45f6-809f-030eb4322337";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   </body>
 </html>
