--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>
-      This is your fallback content in case JavaScript fails to load.
+      To make full use of Coinaly you need JavaScript enabled. If you see this message, it means you don't have Javascript enabled. Please enable Javascript!
     </noscript>
     <div id="app"></div>
     <!-- Todo: only include in production -->
