--- a/index.html
+++ b/index.html
@@ -7,32 +7,54 @@
     <title>Coinaly</title>
     <meta name="description" content="Powerful and easy to use trade interface for cryptocurrencies. Multiple exchanges supported, like Bittrex, Binance, GDAX and many more...">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/favicon-16x16.png">
+    <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#2E63B1">
+    <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#2E63B1">
 
-    <!--[if IE]><link rel="shortcut icon" href="/static/img/icons/favicon.ico"><![endif]-->
+    <!--[if IE]><link rel="shortcut icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/favicon.ico"><![endif]-->
 
     <!-- Add to home screen for Android and modern mobile browsers -->
     <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>static/manifest.json">
-    <meta name="theme-color" content="#4DBA87">
 
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Coinaly">
-    <link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-touch-icon-152x152.png">
-    <link rel="mask-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/safari-pinned-tab.svg" color="#4DBA87">
+    <!-- <link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/apple-touch-icon-152x152.png"> -->
+    <!-- <link rel="mask-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/safari-pinned-tab.svg" color="#4DBA87"> -->
 
     <!-- Add to home screen for Windows -->
-    <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/msapplication-icon-144x144.png">
-    <meta name="msapplication-TileColor" content="#000000">
+    <!-- <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/msapplication-icon-144x144.png"> -->
+    <!-- <meta name="msapplication-TileColor" content="#000000"> -->
     <% for (var chunk of webpack.chunks) {
         for (var file of chunk.files) {
           if (file.match(/\.(js|css)$/)) { %>
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
     <link rel="prefetch" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" />
+
+    <style>
+      body {
+        background-color: #eeeff3;
+      }
+    </style>
   </head>
   <body>
+
+    <div class="loader"></div>
     <noscript>
       To make full use of Coinaly you need JavaScript enabled. If you see this message, it means you don't have Javascript enabled. Please enable Javascript!
     </noscript>
