Add splash screen images

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/favicon-16x16.png">
+
+    <!-- PWA Splash Screen Images -->
+    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/2048x2732.png" sizes="2048x2732" rel="apple-touch-startup-image" />
+    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1668x2224.png" sizes="1668x2224" rel="apple-touch-startup-image" />
+    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1536x2048.png" sizes="1536x2048" rel="apple-touch-startup-image" />
+    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1125x2436.png" sizes="1125x2436" rel="apple-touch-startup-image" />
+    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1242x2208.png" sizes="1242x2208" rel="apple-touch-startup-image" />
+    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/750x1334.png" sizes="750x1334" rel="apple-touch-startup-image" />
+    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/640x1136.png" sizes="640x1136" rel="apple-touch-startup-image" />
+
     <meta name="msapplication-TileColor" content="#2E63B1">
     <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#2E63B1">
