--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/favicon-16x16.png">
 
     <!-- PWA Splash Screen Images -->
-    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/2048x2732.png" sizes="2048x2732" rel="apple-touch-startup-image" />
-    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1668x2224.png" sizes="1668x2224" rel="apple-touch-startup-image" />
-    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1536x2048.png" sizes="1536x2048" rel="apple-touch-startup-image" />
-    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1125x2436.png" sizes="1125x2436" rel="apple-touch-startup-image" />
-    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1242x2208.png" sizes="1242x2208" rel="apple-touch-startup-image" />
-    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/750x1334.png" sizes="750x1334" rel="apple-touch-startup-image" />
-    <link href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/640x1136.png" sizes="640x1136" rel="apple-touch-startup-image" />
+    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/750x1294.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1242x2148.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1536x2048.png" media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/2048x2732.png" media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
 
     <meta name="msapplication-TileColor" content="#2E63B1">
     <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/ms-icon-144x144.png">
