--- a/index.html
+++ b/index.html
@@ -22,13 +22,20 @@
     <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/favicon-16x16.png">
 
     <!-- PWA Splash Screen Images -->
-    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/750x1294.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1242x2148.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1536x2048.png" media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/2048x2732.png" media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+    <!-- iPhone X (1125px x 2436px) -->
+    <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1125x2436.png">
+    <!-- iPhone 8, 7, 6s, 6 (750px x 1334px) -->
+    <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/750x1334.png">
+    <!-- iPhone 8 Plus, 7 Plus, 6s Plus, 6 Plus (1242px x 2208px) -->
+    <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1242x2208.png">
+    <!-- iPhone 5 (640px x 1136px) -->
+    <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/640x1136.png">
+    <!-- iPad Mini, Air (1536px x 2048px) -->
+    <link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1536x2048.png">
+    <!-- iPad Pro 10.5" (1668px x 2224px) -->
+    <link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/1668x2224.png">
+    <!-- iPad Pro 12.9" (2048px x 2732px) -->
+    <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="<%= htmlWebpackPlugin.files.publicPath %>static/splashscreens/2048x2732.png">
 
     <meta name="msapplication-TileColor" content="#2E63B1">
     <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>static/icons/favicons/ms-icon-144x144.png">
