--- a/public/index.html
+++ b/public/index.html
@@ -50,16 +50,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Coinaly">
-    <!-- <link rel="apple-touch-icon" href="<%= BASE_URL %>static/icons/favicons/apple-touch-icon-152x152.png"> -->
-    <!-- <link rel="mask-icon" href="<%= BASE_URL %>static/icons/favicons/safari-pinned-tab.svg" color="#4DBA87"> -->
 
     <!-- Add to home screen for Windows -->
-    <!-- <meta name="msapplication-TileImage" content="<%= BASE_URL %>static/icons/favicons/msapplication-icon-144x144.png"> -->
-    <!-- <meta name="msapplication-TileColor" content="#000000"> -->
-    <% for (var chunk of webpack.chunks) {
-        for (var file of chunk.files) {
-          if (file.match(/\.(js|css)$/)) { %>
-    <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
+    <meta name="msapplication-TileImage" content="<%= BASE_URL %>static/icons/favicons/msapplication-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#000000">
     <link rel="prefetch" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" />
 
     <style>
@@ -73,8 +67,6 @@
       To make full use of Coinaly you need JavaScript enabled. If you see this message, it means you don't have Javascript enabled. Please enable Javascript!
     </noscript>
     <div id="app"></div>
-    <!-- Todo: only include in production -->
-    <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
     <!-- built files will be auto injected -->
     <script async defer type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
     <script async defer type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="1aa08a90-4721-45f6-809f-030eb4322337";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
