--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Coinaly</title>
     <meta name="description" content="Powerful and easy to use trade interface for cryptocurrencies. Multiple exchanges supported, like Bittrex, Binance, GDAX and many more...">
 
+    <!-- Add to home screen for Android and modern mobile browsers -->
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="192x192"  href="<%= BASE_URL %>static/icons/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>static/icons/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>static/icons/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>static/icons/favicons/favicon-16x16.png">
+
+    <!-- Homescreen icons iOS -->
     <link rel="apple-touch-icon" sizes="57x57" href="<%= BASE_URL %>static/icons/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>static/icons/favicons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="<%= BASE_URL %>static/icons/favicons/apple-icon-72x72.png">
@@ -16,10 +25,9 @@
     <link rel="apple-touch-icon" sizes="144x144" href="<%= BASE_URL %>static/icons/favicons/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>static/icons/favicons/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>static/icons/favicons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="<%= BASE_URL %>static/icons/favicons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>static/icons/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>static/icons/favicons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>static/icons/favicons/favicon-16x16.png">
+
+    <!-- Homescreen icon Windows -->
+    <meta name="msapplication-TileImage" content="<%= BASE_URL %>static/icons/favicons/msapplication-icon-144x144.png">
 
     <!-- PWA Splash Screen Images -->
     <!-- iPhone X (1125px x 2436px) -->
@@ -37,24 +45,7 @@
     <!-- iPad Pro 12.9" (2048px x 2732px) -->
     <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>static/splashscreens/2048x2732.png">
 
-    <meta name="msapplication-TileColor" content="#2E63B1">
-    <meta name="msapplication-TileImage" content="<%= BASE_URL %>static/icons/favicons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#2E63B1">
-
     <!--[if IE]><link rel="shortcut icon" href="<%= BASE_URL %>static/icons/favicons/favicon.ico"><![endif]-->
-
-    <!-- Add to home screen for Android and modern mobile browsers -->
-    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
-
-    <!-- Add to home screen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Coinaly">
-
-    <!-- Add to home screen for Windows -->
-    <meta name="msapplication-TileImage" content="<%= BASE_URL %>static/icons/favicons/msapplication-icon-144x144.png">
-    <meta name="msapplication-TileColor" content="#000000">
-
     <style>
       body {
         background-color: #eeeff3;
