--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
     <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>static/splashscreens/2048x2732.png">
 
     <!--[if IE]><link rel="shortcut icon" href="<%= BASE_URL %>static/icons/favicons/favicon.ico"><![endif]-->
+
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" as="style">
+
     <style>
       body {
         background-color: #eeeff3;
